--- a/bower.json
+++ b/bower.json
@@ -3,10 +3,9 @@
   "version": "0.0.1",
   "dependencies": {
     "angular": "1.6.6",
-    "angular-spring-data-rest": "https://github.com/patagonia-it/angular-spring-data-rest.git#master",
     "angular-ui-router": "1.0.10",
     "bootstrap-sass": "^3.3.7",
-    "restangular": "^1.6.1"
+    "font-awesome": "^4.7.0"
   },
   "devDependencies": {
     "angular-mocks": "1.6.6"
