--- a/bower.json
+++ b/bower.json
@@ -4,13 +4,22 @@
   "dependencies": {
     "angular": "1.6.6",
     "angular-ui-router": "1.0.10",
-    "bootstrap-sass": "^3.3.7",
-    "font-awesome": "^4.7.0"
+    "bootstrap-sass": "3.3.7",
+    "font-awesome": "4.7.0",
+    "angular-loading": "0.1.4"
   },
   "devDependencies": {
     "angular-mocks": "1.6.6"
   },
   "resolutions": {
     "angular": "1.6.6"
+  },
+  "overrides": {
+    "angular-loading": {
+      "main": [
+        "./angular-loading.js",
+        "./angular-loading.css"
+      ]
+    }
   }
 }
