--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "angular-ui-router": "1.0.10",
     "bootstrap-sass": "3.3.7",
     "font-awesome": "4.7.0",
-    "angular-loading": "0.1.4"
+    "angular-loading": "0.1.4",
+    "angular-material": "^1.1.5"
   },
   "devDependencies": {
     "angular-mocks": "1.6.6"
