--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "bootstrap-sass": "3.3.7",
     "font-awesome": "4.7.0",
     "angular-loading": "0.1.4",
-    "angular-material": "^1.1.5"
+    "angular-material": "^1.1.5",
+    "material-design-icons": "3.0.1"
   },
   "devDependencies": {
     "angular-mocks": "1.6.6"
