--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-ng-annotate": "^2.0.0",
     "gulp-ng-constant": "^2.0.0-2",
     "gulp-postcss": "^6.3.0",
+    "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.6.1",
     "gulp-rev": "^7.1.2",
     "gulp-rev-replace": "^0.4.3",
