FIX: Se arreglan angular material icons

--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,11 @@
         "./angular-loading.js",
         "./angular-loading.css"
       ]
+    },
+    "material-design-icons": {
+      "main": [
+        "./iconfont/material-icons.css"
+      ]
     }
   }
 }
