--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "font-awesome": "4.7.0",
     "angular-loading": "0.1.4",
     "angular-material": "^1.1.5",
-    "material-design-icons": "3.0.1"
+    "material-design-icons": "3.0.1",
+    "ng-csv": "^0.3.6"
   },
   "devDependencies": {
     "angular-mocks": "1.6.6"
