ADD: Prueba ignore bower

--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "./dist/styles/angular-pit-table.css",
     "./dist/styles/angular-pit-table_vendor.css"
   ],
+  "ignore":["./development.json"],
   "overrides": {
     "angular-loading": {
       "main": [
