--- a/bower.json
+++ b/bower.json
@@ -5,10 +5,10 @@
     "angular": "1.6.6",
     "bootstrap-sass": "3.3.7",
     "font-awesome": "4.7.0",
-    "angular-loading": "0.1.4",
     "angular-material": "^1.1.5",
     "material-design-icons": "3.0.1",
-    "ng-csv": "^0.3.6"
+    "ng-csv": "^0.3.6",
+    "angular-loading-bar": "^0.9.0"
   },
   "devDependencies": {
     "angular-mocks": "1.6.6"
