--- a/bower.json
+++ b/bower.json
@@ -7,8 +7,8 @@
     "font-awesome": "4.7.0",
     "angular-material": "^1.1.5",
     "material-design-icons": "3.0.1",
-    "ng-csv": "^0.3.6",
-    "angular-loading-bar": "^0.9.0"
+    "angular-loading-bar": "^0.9.0",
+    "js-xlsx": "^0.11.14"
   },
   "devDependencies": {
     "angular-mocks": "1.6.6"
