--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,9 @@
     "angular-material": "^1.1.5",
     "material-design-icons": "3.0.1",
     "angular-loading-bar": "^0.9.0",
-    "js-xlsx": "^0.11.14"
+    "js-xlsx": "^0.11.14",
+    "moment": "^2.20.1",
+    "file-saver": "^1.3.3"
   },
   "devDependencies": {
     "angular-mocks": "1.6.6"
