--- a/bower.json
+++ b/bower.json
@@ -5,12 +5,12 @@
     "angular": "1.6.6",
     "bootstrap-sass": "3.3.7",
     "font-awesome": "4.7.0",
-    "angular-material": "^1.1.5",
+    "angular-material": "1.1.5",
     "material-design-icons": "3.0.1",
-    "angular-loading-bar": "^0.9.0",
-    "js-xlsx": "^0.11.14",
-    "moment": "^2.20.1",
-    "file-saver": "^1.3.3"
+    "angular-loading-bar": "0.9.0",
+    "js-xlsx": "0.11.14",
+    "moment": "2.20.1",
+    "file-saver": "1.3.3"
   },
   "devDependencies": {
     "angular-mocks": "1.6.6"
