--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "angular-mocks": "^1.6.2",
     "autoprefixer": "^6.7.3",
     "bower": "^1.8.0",
-    "browser-sync": "^2.18.8",
+    "browser-sync": "2.19.0",
     "browser-sync-spa": "^1.0.3",
     "del": "^2.2.2",
     "es6-shim": "^0.35.3",
